add custom topnav

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
 	<link rel='icon' href='./img/favicon.ico'>
-	<title>Rollup - Webmap Kickstart</title>
+	<title>Title goes here</title>
 	<link rel='stylesheet' href='./bundle.css'>
 </head>
 <body>
